kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api
  namespace: news-search
spec:
  selector:
    app: fast-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  namespace: news-search
  labels:
    app: fast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
      - name: fast-api
        image: tianshuailu/news-search-fastapi:0.0.1
        ports:
        - containerPort: 8000
