kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-frontend
  namespace: news-search
spec:
  selector:
    app: nginx-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-frontend
  namespace: news-search
  labels:
    app: nginx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-frontend
  template:
    metadata:
      labels:
        app: nginx-frontend
    spec:
      containers:
      - name: nginx-frontend
        image: tianshuailu/news-search-nginx-frontend:0.0.1
        ports:
        - containerPort: 8080
