kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api
spec:
  rules:
    - host: news.search.engine
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  service1
                port:
                  number: 80
